# cpp_ts_auth

./: .gitmodules  Jenkinsfile  Jenkinsfile-parallel.bak  Jenkinsfile-serial.bak  README.md
.github/workflows/: ci.yml
be_cpp/: .env  CMakeLists.txt  Dockerfile  run.sh
be_cpp/src/: main.cpp
db_pg/: init.sql
fe_ts/: .env  Dockerfile  package-lock.json  package.json
fe_ts/src/: App.css  App.tsx  config.ts
fe_ts/src/components/: Dashboard.tsx  FormStyles.css  LandingPage.tsx  LoginForm.tsx  RegisterForm.tsx
